donate today part complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- link google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lobster&family=Poppins&display=swap"
         rel="stylesheet">
 
     <!-- link css file -->
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!-- top part -->
     <section class="banner">
         <div>
             <h1>Let’s Help Those Who Are</h1>
@@ -27,10 +28,33 @@
                 give our love, or simply give a smile. What does that cost? The point is, none of us can ever run out of
                 something worthwhile to give."
                 -Steve Goodier</p>
-            <a href="https://www.bidyanondo.org" target="_blank"> Donate Now</a>
+            <a class="donate-now-button" href="https://www.bidyanondo.org" target="_blank"> Donate Now</a>
         </div>
 
     </section>
+    <!-- mid part -->
+    <section class="donate-today">
+        <h1 class="head-tag">Donate Today</h1>
+        <p class="para-text">"Remember that the happiest people are not those getting more, but those giving more." -H.
+            Jackson Brown Jr.</p>
+        <div id="donate-amount">
+            <h2 class="head-tag2">100tk</h2>
+            <h2 id="head-tag2-color">200tk</h2>
+            <h2 class="head-tag2">500tk</h2>
+            <h2 class="head-tag2">1000tk</h2>
+            <h2 class="head-tag2">5000tk</h2>
+        </div>
+        <input type="text" placeholder="Other Amount (Taka)">
+
+        <a class="donate-now-button" href="https://www.bidyanondo.org" target="_blank"> Donate Now</a>
+
+    </section>
+
+    <section class="donate-today">
+        <h1 class="head-tag">Our Donate Plan</h1>
+
+    </section>
+
 
 </body>
 
