our donate plan is almost done

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
     <section class="donate-today">
         <h1 class="head-tag">Our Donate Plan</h1>
+        <p class="para-text">"The best way to find yourself is to lose yourself in the service of others." -Mahatma
+            Ghandi.</p>
 
     </section>
 
