--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1 class="head-tag">Donate Today</h1>
         <p class="para-text">"Remember that the happiest people are not those getting more, but those giving more." -H.
             Jackson Brown Jr.</p>
-        <div id="donate-amount">
+        <div class="donate-amount">
             <h2 class="head-tag2">100tk</h2>
             <h2 id="head-tag2-color">200tk</h2>
             <h2 class="head-tag2">500tk</h2>
@@ -55,6 +55,29 @@
         <p class="para-text">"The best way to find yourself is to lose yourself in the service of others." -Mahatma
             Ghandi.</p>
 
+        <div class="donate-amount">
+            <div class="card" style="background-color: #4F9DA61A;">
+                <img src="icons/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Help restore hope to families here at home who are struggling due to disaster, homelessness, or job
+                    loss. Send Family Food Kits that include nutritious meals like oatmeal, potato soup, pasta, and a
+                    bean and rice casserole.</p>
+            </div>
+            <div class="card" style="background-color: #FF59591A;">
+                <img src="icons/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Poverty, unemployment, and lack of affordable housing are commonly recognized causes of homelessness.
+                </p>
+            </div>
+            <div class="card" style="background-color: #FFF4D6;">
+                <img src="icons/Frame-1.png" alt="">
+                <h3>Education for a child</h3>
+                <p>It is time to take action to ensure street children no longer remain invisible, and are able to
+                    benefit from the efforts towards inclusive and quality education for all.</p>
+            </div>
+
+
+        </div>
     </section>
 
 
