get my updaes part start

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a class="donate-now-button" href="https://www.bidyanondo.org" target="_blank"> Donate Now</a>
 
     </section>
-
+    <!-- donate today part -->
     <section class="donate-today">
         <h1 class="head-tag">Our Donate Plan</h1>
         <p class="para-text">"The best way to find yourself is to lose yourself in the service of others." -Mahatma
@@ -75,11 +75,17 @@
                 <p>It is time to take action to ensure street children no longer remain invisible, and are able to
                     benefit from the efforts towards inclusive and quality education for all.</p>
             </div>
-
-
         </div>
     </section>
 
+    <section class="donate-today">
+        <h1 class="head-tag">Get My Updates</h1>
+        <p class="para-text">Floods paralysing Sylhet. Around 13 lakh people were affected in Sylhet city, including
+            five Upazilas. As a part of the emergency response, we distribute food among the people in the
+            flood-affected area. Every day, we plan to distribute cooked food and water purification tablets. So, please
+            come forward and support them with relief.</p>
+
+    </section>
 
 </body>
 
