get my updaes done

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="head-tag2">1000tk</h2>
             <h2 class="head-tag2">5000tk</h2>
         </div>
-        <input type="text" placeholder="Other Amount (Taka)">
+        <input type="text" placeholder="Other Amount (Taka)" class="input-donate">
 
         <a class="donate-now-button" href="https://www.bidyanondo.org" target="_blank"> Donate Now</a>
 
@@ -85,7 +85,18 @@
             flood-affected area. Every day, we plan to distribute cooked food and water purification tablets. So, please
             come forward and support them with relief.</p>
 
+        <div>
+            <form action="">
+                <input type="text" placeholder="Email">
+                <button>Subscribe</button>
+            </form>
+        </div>
+
     </section>
+
+    <footer>
+
+    </footer>
 
 </body>
 
